# embedded-core-lab

./: CMakeLists.txt  README.md
include/: bitops.h
src/: CMakeLists.txt  bitops.c
tests/: CMakeLists.txt  test_bitops.c
